--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,11 @@
 	        var num = document.getElementById("n1");
 		num.value = Math.pow(num.value, 3);
 	    }
+	    
+	   function pow4() {
+	        var num = document.getElementById("n1");
+		num.value = Math.pow(num.value, 4);
+	    }
 	</script>
     </head>
     <body>
@@ -17,6 +22,7 @@
 	<input type="text" id="n1">
 	<p>
 	    <button onclick="cube()"> x^3</button>
+	    <button onclick="pow4()"> x^4</button>
 	</p>
     </body>
 </html>
