--- a/calculator.html
+++ b/calculator.html
@@ -16,6 +16,9 @@
 	    function sin() {
 	        var num = document.getElementById("n1");
 		num.value = Math.sin(num.value);
+	    function square() {
+	        var num = document.getElementById("n1");
+		num.value = Math.pow(num.value, 2);
 	    }	    
 	</script>
     </head>
@@ -24,6 +27,7 @@
 	Number:
 	<input type="text" id="n1">
 	<p>
+	    <button onclick="square()"> x^2</button>
 	    <button onclick="cube()"> x^3</button>
 	    <button onclick="pow4()"> x^4</button>
 	    <button onclick="sin()"> sin(x)</button>
